--- a/index.html
+++ b/index.html
@@ -5,45 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista del Super</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>Lista para las compras y recetas para cada alimento:</h1>
+    <h1 class="tituloPpal">Lista de alimentos y recetas de cada uno:</h1>
     <main>
         <section>
+            <p id="parrafo">Aca podés encontrar una lista de frutas y verduras.</p>
             <ul>
-                <li><strong>Frutas</strong></li> 
-                    <video controls preload="auto" width="400" height="300">
+                <p class="frutas"><strong>Frutas</strong></p> 
+                    <video class="videoFrutas" controls preload="auto">
                     <source src="https://i.imgur.com/up3e1hZ.mp4#t=3,9">
                     </video>
                 <br>
                     <ol>1. 🍎 <a href="https://www.google.com/search?q=recetas+con+manzanas&oq=recetas+con+manza&aqs=chrome.0.0i433j0j69i57j0l7.2608j0j7&sourceid=chrome&ie=UTF-8" target="_blank">Manzana</a></ol>
                         <figure>
-                            <img src="https://i.imgur.com/fXPEcQI.jpg" 
-                            alt="Imagen de manzana" 
-                            width="350" height="200">
+                            <img class="imgManzana" src="https://i.imgur.com/fXPEcQI.jpg" 
+                            alt="Imagen de manzana">
                         </figure>
                     <br>
                     <ol>2. 🍐 <a href="https://www.google.com/search?q=recetas+con+peras&sxsrf=ALeKk03IZk4BOWgkAR6kzOMzSWnj5epZNw%3A1624713917120&ei=vSrXYLvlBou15OUPvM6MWA&oq=recetas+con+peras&gs_lcp=Cgdnd3Mtd2l6EAMyAggAMgIIADICCAAyAggAMgcIABCHAhAUMgIIADICCAAyAggAMgIIADICCAA6BwgAEEcQsAM6BwgAELADEEM6DQguELADEMgDEEMQkwI6CgguELADEMgDEEM6BQgAELEDSgUIOBIBMUoECEEYAFDUqgJYmq4CYLqvAmgDcAJ4AIABdYgBigSSAQM1LjGYAQCgAQGqAQdnd3Mtd2l6yAEMwAEB&sclient=gws-wiz&ved=0ahUKEwj7t5D_srXxAhWLGrkGHTwnAwsQ4dUDCA4&uact=5" target="_blank">Pera</a></ol>
                         <figure>
-                            <img src="https://i.imgur.com/mQpncmE.jpg" 
-                            alt="Imagen de pera" 
-                            width="300" height="350">
+                            <img class="imgPera" src="https://i.imgur.com/mQpncmE.jpg" 
+                            alt="Imagen de pera">
                         </figure>
                 <br>
-                <li><strong>Verduras</strong></li>
+                <p class="verduras"><strong>Verduras</strong></p>
                 <br>
                     <ol>1. 🍆 <a href="https://www.google.com/search?q=recetas+con+berenjena&sxsrf=ALeKk011oN2SehONJfgY-aexMPHmGNoEKQ%3A1624714129734&ei=kSvXYMq1LIy95OUP5s-wwAU&oq=recetas+con+berenjena&gs_lcp=Cgdnd3Mtd2l6EAMyBQgAELEDMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAOgcIABBHELADOggIABCxAxCDAUoECEEYAFC1BVjUEGDpEWgAcAN4AIABywGIAZ8HkgEFOS4wLjGYAQCgAQGqAQdnd3Mtd2l6yAEIwAEB&sclient=gws-wiz&ved=0ahUKEwiKwsHks7XxAhWMHrkGHeYnDFgQ4dUDCA4&uact=5" target="_blank">Berenjena</a></ol>
                     <figure>
-                        <img src="https://i.imgur.com/ilOb0D6.jpg" 
-                        alt="Imagen de berenejna" 
-                        width="300" height="500">
+                        <img class="imgBerenjena" src="https://i.imgur.com/ilOb0D6.jpg" 
+                        alt="Imagen de berenejna">
                     </figure>
                     <br>
                     <ol>2. 🥒 <a href="https://www.google.com/search?q=recetas+con+zapallitos&sxsrf=ALeKk03iC4gFC_fPVq8MO08bl9Ok4rm_ig%3A1624714133216&ei=lSvXYJjNDMaq5OUPjP6o-Aw&oq=recetas+con+zapallitos&gs_lcp=Cgdnd3Mtd2l6EAMyCggAEIcCELEDEBQyBwgAEIcCEBQyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIADoHCAAQRxCwAzoHCAAQsAMQQzoECCMQJzoICAAQsQMQgwE6BAgAEEM6BQgAELEDSgQIQRgAUNArWJY2YKM3aAFwAngAgAG_AYgBgQmSAQQxMi4xmAEAoAEBqgEHZ3dzLXdpesgBCsABAQ&sclient=gws-wiz&ved=0ahUKEwjY65Xms7XxAhVGFbkGHQw_Cs8Q4dUDCA4&uact=5" target="_blank">Zapallitos</a></ol>
                     <figure>
-                        <img src="https://i.imgur.com/loRHKK5.jpg" 
-                        alt="Imagen de zapallito" 
-                        width="350" height="200">
+                        <img class="imgZapallito" src="https://i.imgur.com/loRHKK5.jpg" 
+                        alt="Imagen de zapallito">
                     <figcaption>Imagen de un zapallito</figcaption>
                     </figure>
             </ul>
